[ 1777049 ] Please Implement - CONTAINS Magical Value Elimination Issue#: 1777049
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@3810 ef53c05b-3124-4d59-ae7d-fe3273f42be7