@@ -72,6 +72,8 @@ public final class Equipment extends PObject implements Serializable,
 		EquipmentCollection, Comparable<Object>, VariableContainer {
 	private static final long serialVersionUID = 1;
 
+	private static final int UNLIMITED_CAPACITY = -1;
+	
 	private static final String EQMOD_WEIGHT = "_WEIGHTADD";
 
 	private static final String EQMOD_DAMAGE = "_DAMAGE";
@@ -6600,7 +6602,6 @@ public final class Equipment extends PObject implements Serializable,
 	 *            The new container value
 	 */
 	public void setContainer(final PlayerCharacter aPC, final String aString) {
-		// -1 means unlimited
 		boolean limited = true;
 		Float aFloat = Float.valueOf(0);
 		d_acceptsChildren = true;
@@ -6630,17 +6631,28 @@ public final class Equipment extends PObject implements Serializable,
 
 			try {
 				containerWeightCapacity = new Float(bString);
+				if (containerWeightCapacity < 0)
+				{
+					Logging.errorPrint(getKeyName()
+						+ " Weight Capacity must be >= 0: " + bString
+						+ "\n  use 'UNLIM' (not -1) for unlimited Capacity");
+				}
 			} catch (NumberFormatException ex) {
-				Logging.errorPrint("Error in CONTAINS line: " + aString);
-				containerWeightCapacity = Float.valueOf(-1);
+				if (!"UNLIM".equals(bString))
+				{
+					Logging.errorPrint("Error in CONTAINS line: " + aString
+						+ "\n" + "  " + bString
+						+ " was not a number or 'UNLIM'");
+				}
+				containerWeightCapacity = Float.valueOf(UNLIMITED_CAPACITY);
 			}
 		} else {
-			containerWeightCapacity = Float.valueOf(-1);
+			containerWeightCapacity = Float.valueOf(UNLIMITED_CAPACITY);
 		}
 
 		if (!aTok.hasMoreTokens()) {
 			limited = false;
-			setAcceptsType("Any", Float.valueOf(-1));
+			setAcceptsType("Any", Float.valueOf(UNLIMITED_CAPACITY));
 		}
 
 		String itemType;
@@ -6652,15 +6664,31 @@ public final class Equipment extends PObject implements Serializable,
 			itemType = typeTok.nextToken();
 
 			if (typeTok.hasMoreTokens()) {
-				itemNumber = new Float(typeTok.nextToken());
+				String itemCount = typeTok.nextToken();
+				if ("UNLIM".equals(itemCount))
+				{
+					limited = false;
+					itemNumber = Float.valueOf(UNLIMITED_CAPACITY);
+				}
+				else
+				{
+					itemNumber = new Float(itemCount);
 
-				if (limited) {
-					aFloat = new Float(aFloat.floatValue()
-							+ itemNumber.floatValue());
+					if (itemNumber < 0)
+					{
+						Logging.errorPrint(getKeyName() + " Item Count for "
+							+ itemType + " must be > 0: " + itemCount
+							+ "\n  use 'UNLIM' (not -1) for unlimited Count");
+					}
+					
+					if (limited) {
+						aFloat = new Float(aFloat.floatValue()
+								+ itemNumber.floatValue());
+					}
 				}
 			} else {
 				limited = false;
-				itemNumber = Float.valueOf(-1);
+				itemNumber = Float.valueOf(UNLIMITED_CAPACITY);
 			}
 
 			if (!"Any".equals(itemType) && !"Total".equals(itemType)) {
@@ -6672,7 +6700,7 @@ public final class Equipment extends PObject implements Serializable,
 
 		if (!acceptsType("Total")) {
 			if (!limited) {
-				aFloat = Float.valueOf(-1);
+				aFloat = Float.valueOf(UNLIMITED_CAPACITY);
 			}
 
 			setAcceptsType("Total", aFloat);
